--- a/css/dot-nav.css
+++ b/css/dot-nav.css
@@ -160,7 +160,7 @@ Main components
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: #81D727;
+  background-color: #76C424;
   -webkit-transition: -webkit-transform 0.2s, background-color 0.5s;
   -moz-transition: -moz-transform 0.2s, background-color 0.5s;
   transition: transform 0.2s, background-color 0.5s;
