--- a/css/back-to-top.css
+++ b/css/back-to-top.css
@@ -48,7 +48,7 @@ html * {
   opacity: .5;
 }
 .no-touch .cd-top:hover {
-  background-color: #81D727;
+  background-color: #79C925;
   opacity: 1;
 }
 @media only screen and (min-width: 768px) {
