--- a/assets/elegant-icons/style.css
+++ b/assets/elegant-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'ElegantIcons';
-	src:url('fonts/ElegantIcons.eot');
-	src:url('fonts/ElegantIcons.eot?#iefix') format('embedded-opentype'),
-		url('fonts/ElegantIcons.ttf') format('truetype'),
-		url('fonts/ElegantIcons.svg#ElegantIcons') format('svg'),
-		url('fonts/ElegantIcons.woff') format('woff');
+	src:url('../fonts/ElegantIcons.eot');
+	src:url('../fonts/ElegantIcons.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/ElegantIcons.ttf') format('truetype'),
+		url('../fonts/ElegantIcons.svg#ElegantIcons') format('svg'),
+		url('../fonts/ElegantIcons.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -12,7 +12,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 @font-face {
 font-family: 'ElegantIcons';
-src: url('fonts/ElegantIcons.svg#ElegantIcons') format('svg');
+src: url('../fonts/ElegantIcons.svg#ElegantIcons') format('svg');
 
 }
 }
