--- a/css/colors.css
+++ b/css/colors.css
@@ -55,8 +55,8 @@ cursor: pointer;
 }
 
 .features .feature .icon-container .icon {
-    border: 1px solid #DBE524;
-    color: #DBE524;
+    border: 1px solid #E0EB25;
+    color: #E0EB25;
 }
 
 .feature-list li i {
