--- a/css/dot-nav.css
+++ b/css/dot-nav.css
@@ -75,7 +75,6 @@ Main components
   color: white;
   font-weight: 300;
   text-transform: uppercase;
-  font-size: 20px;
   font-size: 1.25rem;
 }
 .cd-section p {
@@ -89,7 +88,7 @@ Main components
   .cd-section p {
     font-size: 20px;
     font-size: 1.25rem;
-    line-height: 2;
+    line-height: 2px;
   }
 }
 
@@ -140,7 +139,7 @@ Main components
   -ms-transform: scale(1);
   -o-transform: scale(1);
   transform: scale(1);
-    background: rgba(0, 0, 0, 0.5)
+    background: rgba(100, 170, 0, 0.5)
 }
 .no-touch #cd-vertical-nav a:hover .cd-label {
   opacity: 1;
@@ -151,12 +150,12 @@ Main components
     width: 15px;
     position: relative;
     left: 3px;
+
 }
+
 
 .no-touch #cd-vertical-nav .cd-dot {
   position: relative;
-  /* we set a top value in order to align the dot with the label. If you change label's font, you may need to change this top value*/
-  top: 8px;
   height: 10px;
   width: 10px;
   border-radius: 50%;
@@ -171,11 +170,13 @@ Main components
   transform-origin: 50% 50%;
 }
 .no-touch #cd-vertical-nav .cd-label {
+
   position: relative;
+    line-height: 1.4em;
+    bottom:5px;
   margin-right: 10px;
-  padding: 0.0em 1em;
-  color: white;
-  font-size: 14px;
+  padding: 0em 2px;
+  color: #fff;
   font-size: 0.875rem;
   -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
   -moz-transition: -moz-transform 0.2s, opacity 0.2s;
