--- a/assets/elegant-icons/style.css
+++ b/assets/elegant-icons/style.css
@@ -1212,10 +1212,10 @@ h3 {
 
 .question_mark {
     padding: 1px;
-    color:#fff;
+    color:#0583F2;
 }
 .question_mark:hover{
-        color:#E8F326;
+        color:#0583F2;
 
 }
 
