--- a/css/styles.css
+++ b/css/styles.css
@@ -1244,7 +1244,7 @@ td:hover{
 
 
 .mark {
-    color:#E0EB25;
+    color:#0583F2;
 }
 .mark:hover{
         font-weight: bold;
@@ -1283,7 +1283,7 @@ sup {
 }
 
 .belong {
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
 
 
@@ -1312,3 +1312,17 @@ sup {
     position: absolute;
    right:50%;
 }
+
+#factorization {
+    min-height: 90vh;
+}
+
+.main_block {width: 1000px; border:2px black solid;}
+.main_block:before,.main_block:after { overflow:hidden; content:""; display:table; }
+.main_block:after { clear:both; }
+.inner_block {
+ display: inline-block;
+ float:left;
+width:50%;
+}
+.inner_block img { width:100%; height:auto; vertical-align:middle; }
